gsettings: make g_settings_bind() documentation clearer

https://bugzilla.gnome.org/show_bug.cgi?id=789245